ja/reference/1.0.4/commands/system/status/index.md
---
title: system.status
layout: ja
---

{% comment %}
##############################################
  THIS FILE IS AUTOMATICALLY GENERATED FROM
  "_po/ja/reference/1.0.4/commands/system/status/index.po"
  DO NOT EDIT THIS FILE MANUALLY!
##############################################
{% endcomment %}


* TOC
{:toc}

## 概要 {#abstract}

`system.status` コマンドは、クラスタの現在の状態を返します。

## APIの形式 {#api-types}

### HTTP {#api-types-http}

リクエスト先
: `(ドキュメントルート)/droonga/system/status`

リクエストメソッド
: `GET`

リクエストのURLパラメータ
: なし。

リクエストのbody
: なし。

レスポンスのbody
: [レスポンスメッセージ](#response)。

### REST {#api-types-rest}

対応していません。

### Fluentd {#api-types-fluentd}

形式
: Request-Response型。コマンドに対しては必ず対応するレスポンスが返されます。

リクエストの `type`
: `system.status`

リクエストの `body`
: なし。

レスポンスの `type`
: `system.status.result`

## パラメータの構文 {#syntax}

このコマンドはパラメータを取りません。

## 使い方 {#usage}

このコマンドは各ノードの死活情報を出力します。
例:

    {
      "type" : "system.status",
      "body" : {}
    }
    
    => {
         "type" : "system.status.result",
         "body" : {
           "nodes": {
             "192.168.0.10:10031/droonga": {
               "live": true
             },
             "192.168.0.11:10031/droonga": {
               "live": false
             }
           }
         }
       }


## レスポンス {#response}

このコマンドは以下のようなハッシュを `body` 、`200` を `statusCode` としたレスポンスを返します。以下はその一例です。。

    {
      "nodes" : {
        "<Identifier of the node 1>" : {
          "live" : <Vital status of the node>
        },
        "<Identifier of the node 2>" : { ... },
        ...
      }
    }

`nodes`
: クラスタ内のノードの情報を含むハッシュ。
  ハッシュのキーは、`catalog.json` で定義された各ノードの識別子（形式は `ホスト名:ポート番号/タグ`）です。
  ハッシュの値は対応するノードのステータス情報を表し、以下の情報を含んでいます:
  
  `live`
  : そのノードの死活状態を示す真偽値。
    `true` であれば、そのノードはメッセージを処理する事ができ、他のノードもそのノード宛にメッセージを配送します。
    それ以外の場合、そのノードはサービスが停止しているなどの理由によりメッセージを処理しません。


## エラーの種類 {#errors}

このコマンドは[一般的なエラー](/reference/message/#error)を返します。
